--- a/app/views/auditinits/_form.html.erb
+++ b/app/views/auditinits/_form.html.erb
@@ -4,23 +4,22 @@
 // date picker
   $(function() {
      $( "#datepicker" ).datepicker({
-      dateFormat: "yy-mm-dd"    });
+      dateFormat: "dd-mm-yy"    });
      $( "#datepicker1" ).datepicker({
-      dateFormat: "yy-mm-dd"    });     
-  });
+      dateFormat: "dd-mm-yy"    }); 
 
+      var $tabs = $('.tabbable li');
 
-// script for tabeed panes
-var $tabs = $('.tabbable li');
-
-$('#prevtab').on('click', function() {
-    $tabs.filter('.active').prev('li').find('a[data-toggle="tab"]').tab('show');
-});
+      $('#prevtab').on('click', function() {
+      $tabs.filter('.active').prev('li').find('a[data-toggle="tab"]').tab('show');
+      });
 
 $('#nexttab').on('click', function() {
     $tabs.filter('.active').next('li').find('a[data-toggle="tab"]').tab('show');
 });
-  
+    
+  });
+
 </script>
 
 <%= form_for(@auditinit) do |f| %>
@@ -43,139 +42,147 @@ $('#nexttab').on('click', function() {
           </div>
         <% end %>
 
-
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#organization" data-toggle="tab">Audit</a></li>
-          <li><a href="#client" data-toggle="tab">Plan</a></li>
-          <li><a href="#team" data-toggle="tab">Team </a></li>
-          <li><a href="#confirmation" data-toggle="tab">Confirmation</a></li>
-        </ul>
+      <div class="container offset well">
+        <div class="tabbable">
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#organization" data-toggle="tab">Audit</a></li>
+            <li><a href="#client" data-toggle="tab">Plan</a></li>
+            <li><a href="#team" data-toggle="tab">Team </a></li>
+            <li><a href="#confirmation" data-toggle="tab">Confirmation</a></li>
+            </ul>
         		
-			<div class="tab-content">
-				<div class="tab-pane active" id="organization">
-    				<div class="form-inputs">
-    				  <div class="input-sm">
+		    	<div class="tab-content">
+		    		<div class="tab-pane active" id="organization">
+              <br />
+              <p class="mypara">Step 1 0f 4</p>
+        			<div class="form-inputs">
+      				  <div class="input-sm">
         				  <div class="col-lg-10">
-					    	<%= f.label "Audit Title" %>
-							<%= f.text_field :title, :class =>  "form-control" %>
-				    	  </div>
+			     		    	<%= f.label "Audit Title" %>
+			       				<%= f.text_field :title, :class =>  "form-control" %>
+			  	    	  </div>
 			        	</div>
-    				   <br/><br/>
-    				   <div class="input-sm">
-        				   <div class="col-lg-10">
-    						   <%= f.label "Audit Purpose" %>
-							   <%= f.text_area :purpose , :rows => 5, :cols => 25 , :class =>  "form-control" %>
-   			    		    </div>
-    					</div>
-    					<br/><br/>
-    					<div class="input-sm">
+    				    <br/><br/>
+    				    <div class="input-sm">
+        			    <div class="col-lg-10">
+    						    <%= f.label "Audit Purpose" %>
+							      <%= f.text_area :purpose , :rows => 5, :cols => 25 , :class =>  "form-control" %>
+   			    		  </div>
+    				  	</div>
+    				  	<br/><br/>
+    				  	<div class="input-sm">
          					<div class="col-lg-10">
       							<%= f.label "Audit Scope" %>
-								<%= f.text_area :scope , :rows => 5, :cols => 25 ,    :class =>  "form-control" %>
+						    		<%= f.text_area :scope , :rows => 5, :cols => 25 ,    :class =>  "form-control" %>
       						</div>
       					</div>
       					<br/><br/>
       					<div class="input-sm">
-          					<div class="col-lg-10">
+          				<div class="col-lg-10">
       							<%= f.label "Audit Summary" %>
-								<%= f.text_area :summary , :rows => 5, :cols => 25 ,    :class =>  "form-control"%>
-						    </div>
+						    		<%= f.text_area :summary , :rows => 5, :cols => 25 ,    :class =>  "form-control"%>
+						      </div>
       					</div>
        					<br/><br/>                   
-    				</div>
+    			    </div>
+			      </div>
 
-  
-				</div>
-
-				<div class="tab-pane" id="client">
-    				<div class="form-inputs">
-            <div class="input-sm">
+			    	<div class="tab-pane" id="client">
+              <br />
+              <p class="mypara">Step 2 0f 4</p>
+    	 	  		<div class="form-inputs">
+                <div class="input-sm">
                   <div class="col-lg-10">
-                <%= f.label "Client Name" %>
-              <%= f.text_field :client_name  ,:class =>  "form-control input-sm" %>
+                    <%= f.label "Client Name" %>
+                    <%= f.text_field :client_name  ,:class =>  "form-control input-sm" %>
+                  </div>
                 </div>
-                </div>
-               <br/><br/>
-    				  <div class="input-sm">
-        				  <div class="col-lg-10">
-					    	<%= f.label "Type" %>
-							<%= f.text_field :a_type  ,:class =>  "form-control input-sm" %>
-				    	  </div>
-			        	</div>
-    				   <br/><br/>
-    				   <div class="input-sm">
-        				   <div class="col-lg-10">
-    						<%= f.label "Location" %>
-							<%= f.text_field :location  ,:class =>  "form-control" %>  
-   			    		    </div>
-    					</div>
-    					<br/><br/>
-    					<div class="input-sm">
+                <br/><br/>
+    		  		  <div class="input-sm">
+          			  <div class="col-lg-10">
+					        	<%= f.label "Type" %>
+							      <%= f.text_field :a_type  ,:class =>  "form-control input-sm" %>
+				    	    </div>
+			          </div>
+    				    <br/><br/>
+    				    <div class="input-sm">
+        			    <div class="col-lg-10">
+    					     	<%= f.label "Location" %>
+							      <%= f.text_field :location  ,:class =>  "form-control" %>  
+   			    		  </div>
+    				  	</div>
+    					  <br/><br/>
+    					  <div class="input-sm">
          					<div class="col-lg-4">
-							   <%= f.label "Start Date" %>
-							   <%= f.datepicker :start_date, :id => :datepicker ,:class =>  "form-control input-sm" %>
+							      <%= f.label "Start Date" %>
+							      <%= f.datepicker :start_date, :id => :datepicker ,:class =>  "form-control input-sm" %>
       						</div>
-      					</div>
-      					<br/><br/>
-      					<div class="input-sm">
-          					<div class="col-lg-4">						
-								<%= f.label "End Date " %>
-								<%= f.datepicker :end_date, :id => :datepicker1, :class =>  "form-control input-sm" %>	
-						    </div>
-      					</div>
-       					<br/><br/>  
+      				  </div>
+      				  <br/><br/>
+      				  <div class="input-sm">
+          			  <div class="col-lg-4">						
+							   	  <%= f.label "End Date " %>
+								    <%= f.datepicker :end_date, :id => :datepicker1, :class =>  "form-control input-sm" %>	
+						      </div>
+      				  </div>
+       				  <br/><br/>                   
+    				  </div>
+			   	  </div>
 
-                <div class="btn btn-primary">
-                <a href="#team" data-toggle="tab">Team </a>
-                </div>                 
-    				</div>
-				</div>
-
-				<div class="tab-pane" id="team">
-    				<div class="form-inputs">
-    				  <div class="input-sm">
-        				  <div class="col-lg-10">
-					    	<%= f.label "Auditor Name" %>
-							<%= f.text_field :auditor_name   ,:class =>  "form-control"%>
-				    	  </div>
-			        	</div>
-    				   <br/><br/>
-    				   <div class="input-sm">
-        				   <div class="col-lg-10">
-							<%= f.label "Auditor Email" %>
-							<%= f.text_field :auditor_email  ,:class =>  "form-control"%>
-   			    		    </div>
-    					</div>
-    					<br/><br/>
-    					<div class="input-sm">
+			    	<div class="tab-pane" id="team">
+              <br />
+              <p class="mypara">Step 3 0f 4</p>
+    		  		<div class="form-inputs">
+    		  		  <div class="input-sm">
+          				<div class="col-lg-10">
+				  	    	  <%= f.label "Auditor Name" %>
+				  			    <%= f.text_field :auditor_name   ,:class =>  "form-control"%>
+				      	  </div>
+			          </div>
+    		  		  <br/><br/>
+    		  		  <div class="input-sm">
+          			  <div class="col-lg-10">
+							      <%= f.label "Auditor Email" %>
+							      <%= f.text_field :auditor_email  ,:class =>  "form-control"%>
+   			    	  	</div>
+    				  	</div>
+    				  	<br/><br/>
+    				  	<div class="input-sm">
          					<div class="col-lg-10">
-							   <%= f.label "Auditee Name" %>
-							   <%= f.text_field :auditee_name ,:class =>  "form-control" %>
+							      <%= f.label "Auditee Name" %>
+							      <%= f.text_field :auditee_name ,:class =>  "form-control" %>
       						</div>
-      					</div>
-      					<br/><br/>
-      					<div class="input-sm">
-          					<div class="col-lg-10">						
-								<%= f.label "Auditee Email" %>
-								<%= f.text_field :auditee_email ,:class =>  "form-control" %>
-						    </div>
-      					</div>
-       					<br/><br/>                   
-    				</div>
-				</div>
+      			  	</div>
+      			  	<br/><br/>
+      			  	<div class="input-sm">
+          				<div class="col-lg-10">						
+							     	<%= f.label "Auditee Email" %>
+								    <%= f.text_field :auditee_email ,:class =>  "form-control" %>
+						      </div>
+      			  	</div>
+       			  	<br/><br/>                   
+    			  	</div>
+				    </div>
 
-        <div class="tab-pane" id="confirmation">
-            <div class="form-inputs">
-              <div class="input-sm">
-                <div class="col-lg-10">
-                <%= f.submit 'Submit',  :class => "btn btn-success btn-sm" %>
+            <div class="tab-pane" id="confirmation">
+              <br />
+              <p class="mypara">Step 4 0f 4</p>
+                <div class="form-inputs">
+                  <div class="input-sm">
+                    <div class="col-lg-10">
+                      <%= f.submit 'Submit',  :class => "btn btn-success btn-sm" %>
+                    </div>
+                  </div>
+                  <br/><br/>      
                 </div>
-              </div>
-               <br/><br/>      
             </div>
+          </div>
         </div>
-
-    		</div>
+    	</div>
+      <div class="btn-group">
+        <button class="btn" id="prevtab" type="button">Prev</button>
+        <button class="btn" id="nexttab" type="button">Next</button>
+      </div>
 		</div>
 	</div>
 </div>
