--- a/app/views/auditinits/index.html.erb
+++ b/app/views/auditinits/index.html.erb
@@ -9,8 +9,9 @@
 	<!-- Rendering menu  -->
 	<%= render :partial => "layouts/menu" %>
 
-	
+	<!-- Main -->
 
+	<h1 class="myfont">Audit Initation</h1>
 	<div class="container" , style="height:900px" >	
 
 		<div class="btn btn-default btn-sm pull-right">
