--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,10 +1,8 @@
-Welcome to FixNix Audit Management, <%= @user.username %>
+Welcome to FixNix Audit Managemen
 ===============================================
  
 You have successfully signed up to www.fixrnix.in,
-your username is: <%= @user.username %>.
- 
-To login to the site, just follow this link: <%= @url %>.
+
  
 Thanks for joining and have a great day!
 
