--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -31,7 +31,7 @@
 			
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-        	<li class="dropdown <%= 'active' if params[:controller] == 'dashboards' %>">
+        	<li class="dropdown <%= 'active' if params[:controller] == 'catvalues' %>">
           		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
           		<ul class="dropdown-menu">
             		<li><a href="/catvalues">Configure</a></li>
