--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -73,10 +73,9 @@
   <%= render :partial => "layouts/menu" %>
 
   <!-- Calendar Section -->
+  <h1 class="myfont"><center>Calendar</center></h1>
+  <br />
   <div id='calendar'>
-          <button onclick="getView()">getView</button>
-      <button onclick="$('#calendar').fullCalendar('changeView', 'basicDay')">change to basicDay</button>
-
   </div>
   <!-- End of Calendar -->
 
